# lpl-project

./: .clang-format  CMakeLists.txt  README.md  grammar.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  to_string.cpp
examples/: examples.lpl  test.lpl
examples/expressions/: binary_operation.lpl  block.lpl  bool.lpl  call.lpl  char.lpl  float.lpl  grouped_expression.lpl  if.lpl  int.lpl  string.lpl  unary_operation.lpl
examples/statements/: assignment.lpl  let.lpl
